Java 21, Spring 3.x